# poetry-pep735-dependabot

./: pyproject.toml
.github/: dependabot.yml
